--- a/Dockerfile.goscm
+++ b/Dockerfile.goscm
@@ -10,5 +10,5 @@ RUN \
 VOLUME ["/goscm"]
 
 RUN mkdir -p /app
-ADD tmp/go-scm /app/
+ADD tmp/linux/go-scm /app/
 ENTRYPOINT ["/app/go-scm", "--base_dir_path=/goscm"]
