--- a/Dockerfile.goscm
+++ b/Dockerfile.goscm
@@ -2,10 +2,18 @@ FROM ubuntu:trusty
 MAINTAINER peter.edge@gmail.com
 
 RUN \
+  apt-get update -y && \
+  apt-get install -y \
+    software-properties-common && \
   echo 'deb http://ppa.launchpad.net/git-core/candidate/ubuntu trusty main' > /etc/apt/sources.list.d/git.list && \
   apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E1DF1F24 && \
+  add-apt-repository ppa:mercurial-ppa/releases && \
   apt-get update -y && \
-  apt-get install -y git
+  apt-get install -y \
+    build-essential \
+    git \
+    mercurial \
+    curl
 
 VOLUME ["/goscm"]
 
