--- a/Dockerfile.tarball
+++ b/Dockerfile.tarball
@@ -18,5 +18,5 @@ RUN \
 VOLUME ["/goscm"]
 
 RUN mkdir -p /app
-ADD tmp/linux/scm-checkout /app/
-ENTRYPOINT ["/app/scm-checkout", "--base_dir_path=/goscm"]
+ADD tmp/linux/scm-tarball /app/
+ENTRYPOINT ["/app/scm-tarball", "--base_dir_path=/goscm"]
